Fix .image-text alignment

--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ div > a:hover {
 .image-text {
     position: absolute;
     color: #4285f4;
-    left: 850px;
-    bottom: 380px;
+    left: 680px;
+    bottom: 298px;
 }
 
 /*STYLING FOR ADVANCED SEARCH PAGE*/
